# BitCalc

./: .gitignore  CMakeLists.txt  README.md
BitCalc/: BitCalc.cpp  BitCalc.h
BitCalc_Console/: BitCalc_Console.cpp  CMakeLists.txt
BitCalc_Test/: BitCalc_Test.cpp  CMakeLists.txt
